# photosquid

./: .gitignore  .todolist  .todolist-completed.md  .todolist.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
glium_text_rusttype/: Cargo.toml
glium_text_rusttype/src/: lib.rs
photosquid/: Cargo.toml
photosquid/src/: aabb.rs  accumulator.rs  algorithm.rs  annotations.rs  app.rs  approx_instant.rs  as_values.rs  bool_poll.rs  button.rs  camera.rs  capture.rs  checkbox.rs  clearable.rs  color.rs  color_picker.rs  color_scheme.rs  context_menu.rs  ctrl_or_cmd.rs  dialog.rs  dragging.rs  export.rs  history.rs  icon_button.rs  interaction.rs  interaction_options.rs  io.rs  layer.rs  main.rs  math_helpers.rs  matrix.rs  mesh.rs  mouse.rs  obj.rs  obj_helpers.rs  ocean.rs  operation.rs  press_animation.rs  raster_color.rs  render_ctx.rs  selection.rs  (+10 more)
photosquid/src/_src_shaders/color/: fragment.glsl  vertex.glsl
photosquid/src/_src_shaders/color_picker/hue_value/: fragment.glsl
photosquid/src/_src_shaders/color_picker/saturation/: fragment.glsl
photosquid/src/_src_shaders/rounded_rectangle/: fragment.glsl
photosquid/src/_src_shaders/texture/: fragment.glsl  vertex.glsl
photosquid/src/components/: mod.rs
photosquid/src/data/: circle.rs  mod.rs  rect.rs  tri.rs
photosquid/src/linear_set/: mod.rs
photosquid/src/options/: color_picker.rs  mod.rs  tab_button.rs
photosquid/src/options/tab/: layers.rs  mod.rs  object.rs
photosquid/src/smooth/: circle_lerpable.rs  lerpable.rs  mod.rs  multi_lerp.rs  no_lerp.rs  smooth.rs
photosquid/src/squid/: circle.rs  mod.rs  rect.rs  tri.rs
photosquid/src/squid/behavior/: dilate_behavior.rs  mod.rs  revolve_behavior.rs  rotate_behavior.rs  spread_behavior.rs  translate_behavior.rs
photosquid/src/tool/: circle.rs  interaction.rs  mod.rs  pan.rs  pointer.rs  rect.rs  tri.rs
photosquid/src/user_input/: button.rs  checkbox.rs  mod.rs  text_input.rs
